solving totalQ and totalP

--- a/checkout.html
+++ b/checkout.html
@@ -73,11 +73,11 @@
                 <div class="return">
                     <div class="row">
                         <div>Total Quantity</div>
-                        <div class="totalQuantity">70</div>
+                        <div id="totalQuantity">0</div>
                     </div>
                     <div class="row">
                         <div>Total Price</div>
-                        <div class="totalPrice">$900</div>
+                        <div id="totalPrice">$0</div>
                     </div>
                 </div>
                 <button class="buttonCheckout">CHECKOUT</button>
