Added button function on product pages

--- a/product-1.html
+++ b/product-1.html
@@ -28,7 +28,8 @@
     <script src="js-files/nav.js"></script>
     <script src="js-files/footer.js"></script>
     <script src="js-files/home.js"></script>
-    <script src="js-files/product.js"></script>
+    <script src="js-files/app.js"></script>
+    <script src="js-files/checkout.js"></script>
     <script src="js-files/buttonfunction.js"></script>
 
     <script>
