added kim jong un exodia

--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,7 @@
 
         .team-member img {
             max-width: 80px;
-            border-radius: 50%;
+            border-radius: 60%;
             margin-right: 20px;
         }
 
@@ -71,34 +71,34 @@
             <p>Meet our team:</p>
 
             <div class="team-member">
-                <img src="https://www.facebook.com/photo/?fbid=5298819223467945&set=a.166698563346729" alt="Team Member 1">
+                <img src="img/kju-head.png" alt="Team Member 1">
                 <div class="team-member-details">
                     <div class="team-member-name">Ozzy Moises Beringuel</div>
-                    <div class="team-member-role">Back-End Developer</div>
+                    <div class="team-member-role">Member</div>
                 </div>
             </div>
 
             <div class="team-member">
-                <img src="team-member2.jpg" alt="Team Member 2">
+                <img src="img/kju-2.png" alt="Team Member 2">
                 <div class="team-member-details">
                     <div class="team-member-name">Fiona Winslette Dantes</div>
-                    <div class="team-member-role">Marketing Manager</div>
+                    <div class="team-member-role">Member</div>
                 </div>
             </div>
 
             <div class="team-member">
-                <img src="team-member1.jpg" alt="Team Member 1">
+                <img src="img/kju-3.png" alt="Team Member 1">
                 <div class="team-member-details">
                     <div class="team-member-name">Joshua Raphael Guarin</div>
-                    <div class="team-member-role">Co-Founder</div>
+                    <div class="team-member-role">Member</div>
                 </div>
             </div>
 
             <div class="team-member">
-                <img src="team-member2.jpg" alt="Team Member 2">
+                <img src="img/kju-4.png" alt="Team Member 2">
                 <div class="team-member-details">
                     <div class="team-member-name">Dustin Gabriel Portes</div>
-                    <div class="team-member-role">Front-End Developer</div>
+                    <div class="team-member-role">Member</div>
                 </div>
             </div>
 
