--- a/checkout.html
+++ b/checkout.html
@@ -96,7 +96,7 @@
                         <div id="totalPrice">$0</div>
                     </div>
                 </div>
-                <button class="buttonCheckout" onclick="Alert()">CHECKOUT</button>
+                <button class="buttonCheckout" onclick="Alert()" >CHECKOUT</button>
                 </div>
         </div>
     </div>
@@ -112,6 +112,7 @@
     <script>
         function Alert() {
             alert("Transaction Completed!");
+            window.location.href = "index.html";
         }
     </script>
 </body>
