--- a/aboutus.html
+++ b/aboutus.html
@@ -71,7 +71,7 @@
             <p>Meet our team:</p>
 
             <div class="team-member">
-                <img src="img/kju-head.png" alt="Team Member 1">
+                <img src="" alt="Team Member 1">
                 <div class="team-member-details">
                     <div class="team-member-name">Ozzy Moises Beringuel</div>
                     <div class="team-member-role">Member</div>
@@ -79,7 +79,7 @@
             </div>
 
             <div class="team-member">
-                <img src="img/kju-2.png" alt="Team Member 2">
+                <img src="" alt="Team Member 2">
                 <div class="team-member-details">
                     <div class="team-member-name">Fiona Winslette Dantes</div>
                     <div class="team-member-role">Member</div>
@@ -87,7 +87,7 @@
             </div>
 
             <div class="team-member">
-                <img src="img/kju-3.png" alt="Team Member 1">
+                <img src="" alt="Team Member 1">
                 <div class="team-member-details">
                     <div class="team-member-name">Joshua Raphael Guarin</div>
                     <div class="team-member-role">Member</div>
@@ -95,7 +95,7 @@
             </div>
 
             <div class="team-member">
-                <img src="img/kju-4.png" alt="Team Member 2">
+                <img src="" alt="Team Member 2">
                 <div class="team-member-details">
                     <div class="team-member-name">Dustin Gabriel Portes</div>
                     <div class="team-member-role">Member</div>
